Changes for 1.8.1.1
* Fixed lag and synchronization issues in the multi-threaded battle calc. Also added methods to time how long it takes to copy the game data, and use fewer threads if this takes more than 5 seconds. (veqryn)

* Fixed possible deserialization error in resource collections. (veqryn)

* Fixed bug in movement performer, which under certain rare circumstances would take all movement away from air units going from sea to land. (veqryn)

* Further work on ProAI (called Hard AI in game menu), including new methods to determine retreats in battles. (redrum)

* Fixed bug in username muting, which caused it to not work at all. (veqryn)

* Fixed issue with the game waiting on a player to click all 'OK' messages before a battle would continue. (veqryn)

* Fixed MapCreator so that it will properly send the map folder to the utility programs. (veqryn)

* Adding options to engine preferences to change how long your game host waits for clients on game startup and for observers joining. (veqryn)

* Allowing host to wait up to 100 seconds when starting a game for all clients to report in as good, and wait up to 30 seconds for observers joining after game has started. (veqryn) 

* Fixing two memory leaks that allowed AI's and GameData to stay in memory after exiting back to main screen. (veqryn)

* Creating a threaded version of the BattleCalculator, to speed up results. (redrum & veqryn)

* Creating a logging window for ProAI so that players can watch the log. (redrum)


Changes for 1.8.0.3
* Created new step property option, "repairPlayers", which will allow a player to repair the units owned by a different player. (veqryn)

* Fixed issue where your move phase was skipped if the only unit you owned was a land unit in a transport. (veqryn)

* Allowing land units to receive repairing and bonus movement from neighboring sea zone sea units. (veqryn)
